fix: style improvements to align with figma file
Ignore background image

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,26 +4,31 @@
 @import './reset.scss';
 
 .section {
-  padding: 0 30px;
+  padding: 0 24px 91px;
 }
 
 .social-proof {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 
   &__header-container {
-    margin-bottom: 34px;
+    margin-bottom: 33px;
   }
 
   &__header {
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: -.5px;
+    margin: 80px 0 32px;
     text-align: center;
-    line-height: 22px;
   }
 
   &__title {
-    font-size: 28px;
+    font-size: 32px;
     color: $color-text-primary-heading;
-    line-height: 28px;
+    line-height: 32px;
+    letter-spacing: -1.14px;
     margin-bottom: 24px;
     padding: 0 35px;
   }
@@ -35,21 +40,29 @@
   &__card {
     display: grid;
     background-color: $color-background-secondary;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 15px;
     margin: 8px 0;
     text-align: center;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 700;
     color: $color-text-primary-heading;
-    line-height: 16px;
+    line-height: 14.56px;
+  }
+
+  &__rate {
+    margin-bottom: 14.15px;
   }
 
   &__icon {
     position: relative;
     display: inline-block;
-    width: 20px;
-    height: 24px;
+    width: 16.55px;
+    height: 15.77px;
+
+    &+& {
+      margin-left: 7.45px;
+    }
 
     &--100 {
       &::after {
@@ -71,8 +84,8 @@
 
   &__card {
     background-color: $color-background-primary;
-    border-radius: 5px;
-    padding: 40px 32px;
+    border-radius: 8px;
+    padding: 40px 32px 32px;
     margin: 8px 0;
     font-size: 12px;
     font-weight: 500;
@@ -84,8 +97,8 @@
     display: grid;
     grid-template-columns: 40px auto;
     grid-template-rows: 20px 20px;
-    column-gap: 20px;
-    margin-bottom: 30px;
+    column-gap: 23px;
+    margin-bottom: 26px;
   }
 
   &__image {
@@ -96,17 +109,23 @@
 
   &__name {
     margin: 0;
-    font-size: inherit;
+    font-size: 13px;
     font-weight: 700;
+    line-height: 14.56px;
+    margin-bottom: 5px;
   }
 
   &__verified {
-    font-weight: 300;
+    font-weight: 400;
+    line-height: 14.56px;
     color: $color-text-primary-subheading;
   }
 
   &__quote {
     margin: 0;
+    font-size: 13px;
+    line-height: 22px;
+    letter-spacing: -.3px;
   }
 }
 
@@ -114,6 +133,7 @@
   font-size: 11px;
   text-align: center;
   padding: 10px 0 5px;
+  margin-top: auto;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
@@ -149,39 +169,44 @@
   .social-proof {
     &__header-container {
       display: grid;
-      grid-template-columns: 50% 49%;
+      grid-template-columns: 45% 49%;
       justify-content: space-between;
-      margin-bottom: 58px;
+      margin-top: 127px;
+      margin-bottom: 64px;
     }
 
     &__header {
       text-align: left;
-      max-width: 80%;
+      margin: 0;
     }
 
     &__title {
-      font-size: 42px;
-      line-height: 45px;
+      font-size: 48px;
+      line-height: 48px;
+      margin-top: 0;
       margin-bottom: 15px;
       padding: 0;
-      letter-spacing: -1px;
+      letter-spacing: -1.71px;
     }
   }
 
   .ratings {
     display: grid;
     grid-template-columns: repeat(12, 0.1fr);
-    grid-template-rows: repeat(3, 62px);
+    grid-template-rows: repeat(3, auto);
     align-content: center;
 
     &__rate {
       display: flex;
       justify-content: center;
+      margin-bottom: 0;
     }
 
     &__card {
       grid-template-columns: 40% auto;
-      max-width: 450px;
+      grid-column-gap: 12px;
+      padding: 20px;
+      max-width: 445px;
 
       &:nth-child(1) {
         grid-column: 1 / span 10;
@@ -199,10 +224,15 @@
     &__icon {
       height: 17px;
       margin: 0 2px;
+
+      & + & {
+        margin-left: 8.45px;
+      }
     }
 
     &__caption {
       display: flex;
+      align-items: center;
     }
   }
 
@@ -215,7 +245,19 @@
 
 @media screen and (min-width: $lg-device) {
   .section {
-    padding: 0;
+    padding: 0 0 100px;
     max-width: 1110px;
+  }
+
+  .social-proof {
+    &__header-container {
+      grid-template-columns: 40% 49%;
+    }
+  }
+
+  .quotes {
+    &__quote {
+      letter-spacing: -.23px;
+    }
   }
 }
