--- a/styles/tokens.scss
+++ b/styles/tokens.scss
@@ -2,7 +2,7 @@ $sm-device: 768px;
 $md-device: 1024px;
 $lg-device: 1366px; // Ipad in landscape
 
-$color-primary-dark: hsl(300, 43%, 22%);
+$color-primary-dark: hsl(301, 44%, 22%);
 $color-primary-light: hsl(333, 80%, 67%);
 $color-neutral-dark: hsl(303, 10%, 53%);
 $color-neutral-light: hsl(300, 24%, 96%);
